add create scenario
